--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.0.3",
     "@mui/material": "^5.0.3",
     "gatsby": "^3.13.1",
     "gatsby-plugin-image": "^1.14.1",
