--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "sass": "^1.42.1"
+    "sass": "^1.42.1",
+    "superagent": "^6.1.0"
   },
   "devDependencies": {}
 }
